Disable dashing of consecutive identical author entries in IEEEtran; Fix Rattlesnake bib entry title

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3657,7 +3657,7 @@ Publisher: Nature Publishing Group},
 
 @article{wang_hybrid_2017,
 	series = {Special {Issue} on the {Physics} of {Reactors} {International} {Conference} {PHYSOR} 2016: {Unifying} {Theory} and {Experiments} in the 21st {Century}},
-	title = {Hybrid {PN}-{SN}{\textless}math{\textgreater}{\textless}mrow is="true"{\textgreater}{\textless}msub is="true"{\textgreater}{\textless}mi is="true"{\textgreater}{P}{\textless}/mi{\textgreater}{\textless}mi is="true"{\textgreater}{N}{\textless}/mi{\textgreater}{\textless}/msub{\textgreater}{\textless}mo is="true"{\textgreater}-{\textless}/mo{\textgreater}{\textless}msub is="true"{\textgreater}{\textless}mi is="true"{\textgreater}{S}{\textless}/mi{\textgreater}{\textless}mi is="true"{\textgreater}{N}{\textless}/mi{\textgreater}{\textless}/msub{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} with {Lagrange} multiplier and upwinding for the multiscale transport capability in {Rattlesnake}},
+	title = {Hybrid {PN}-{SN} with {Lagrange} multiplier and upwinding for the multiscale transport capability in {Rattlesnake}},
 	volume = {101},
 	issn = {0149-1970},
 	url = {https://www.sciencedirect.com/science/article/pii/S0149197017300653},
