--- a/acros.tex
+++ b/acros.tex
@@ -179,6 +179,7 @@
 \newacronym{RMM}{RMM}{Response Matrix Method}
 \newacronym{ROD}{ROD}{Reactor Optimum Design}
 \newacronym{RSM}{RSM}{Reynolds stress model}
+\newacronym{SAAF}{SAAF}{self-adjoint angular flux}
 \newacronym{SAM}{SAM}{System Analysis Module}
 \newacronym{SAMOFAR}{SAMOFAR}{Safety Assessment of the Molten Salt Fast Reactor}
 \newacronym{SAMOSAFER}{SAMOSAFER}{Severe Accident Modeling and Safety Assessment for Fluid-fuel Energy Reactors}
