--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,6 @@
 \title{A Hybrid Neutronics Method for Time-Dependent Control Rod Modeling in Molten Salt Reactors}
 \author{Sun Myung Park}
 \department{Nuclear, Plasma \& Radiological Engineering}
-\prelim
 \degreeyear{2024}
 \committee{Dr Madicken Munk, Chair \\
            Professor Rizwan Uddin \\
@@ -141,19 +140,17 @@ nogroupskip=true]
 %\label{chap:moltres}
 %\input{moltres}
 %\glsresetall
-%
-%\chapter{Verification of Moltres for Multiphysics Molten Salt
-%Reactor Modeling}
+
+\chapter{Verification of Multiphysics Coupling in Moltres}
 %\label{chap:benchmark}
 %\input{benchmark}
 %\glsresetall
-%
-%\chapter{Hybrid S$_\text{N}$-Diffusion Method for Improved Control Rod Modeling
-%in Neutron Diffusion Methods}
-%\label{chap:hybrid}
-%\input{hybrid}
-%\glsresetall
-%
+
+\chapter{Hybrid $S_N$-Diffusion Method}
+\label{chap:hybrid}
+\input{hybrid}
+\glsresetall
+
 %\chapter{Proposed Work}
 %\label{chap:proposedwork}
 %\input{proposed-work}
