--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3699,3 +3699,45 @@ Publisher: Nature Publishing Group},
 INIS Reference Number: 8288836},
 	pages = {202--203},
 }
+
+@misc{noauthor_diffusion_nodate,
+	title = {Diffusion {Acceleration} {Schemes} for {Self}-{Adjoint} {Angular} {Flux} {Formulation} with a {Void} {Treatment}},
+	url = {https://www-tandfonline-com.proxy2.library.illinois.edu/doi/epdf/10.13182/NSE12-83?needAccess=true},
+	language = {en},
+	urldate = {2024-06-10},
+	doi = {10.13182/NSE12-83},
+	file = {Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\RS55BRID\\NSE12-83.html:text/html},
+}
+
+@techreport{wang_rattlesnake_2018,
+	title = {Rattlesnake {Theory} {Manual}},
+	url = {http://www.osti.gov/servlets/purl/1466687/},
+	language = {en},
+	number = {INL/EXT--17-42103, 1466687},
+	urldate = {2024-06-10},
+	author = {Wang, Yaqi and Schunert, Sebastian and Laboure, Vincent},
+	month = apr,
+	year = {2018},
+	doi = {10.2172/1466687},
+	pages = {INL/EXT--17--42103, 1466687},
+	file = {Wang et al. - 2018 - Rattlesnake Theory Manual.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\58HKL2IX\\Wang et al. - 2018 - Rattlesnake Theory Manual.pdf:application/pdf},
+}
+
+@article{wang_diffusion_2014,
+	title = {Diffusion {Acceleration} {Schemes} for {Self}-{Adjoint} {Angular} {Flux} {Formulation} with a {Void} {Treatment}},
+	volume = {176},
+	issn = {0029-5639},
+	url = {https://doi.org/10.13182/NSE12-83},
+	doi = {10.13182/NSE12-83},
+	abstract = {A Galerkin weak form for the monoenergetic neutron transport equation with a continuous finite element method and discrete ordinate method is developed based on self-adjoint angular flux formulation. This weak form is modified for treating void regions. A consistent diffusion scheme is developed with P0 projection. Correction terms of the diffusion scheme are derived to reproduce the transport scalar flux. A source iteration that decouples the solution of all directions with both linear and nonlinear diffusion accelerations is developed and demonstrated. One-dimensional Fourier analysis is conducted to demonstrate the stability of the linear and nonlinear diffusion accelerations. Numerical results of these schemes are presented.},
+	number = {2},
+	urldate = {2024-06-10},
+	journal = {Nuclear Science and Engineering},
+	author = {Wang, Yaqi and Zhang, Hongbin and Martineau, Richard C.},
+	month = feb,
+	year = {2014},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.13182/NSE12-83},
+	pages = {201--225},
+	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\R9GWIAFT\\Wang et al. - 2014 - Diffusion Acceleration Schemes for Self-Adjoint An.pdf:application/pdf},
+}
