--- a/acros.tex
+++ b/acros.tex
@@ -71,6 +71,7 @@
 \newacronym{GENIUS}{GENIUS}{Global Evaluation of Nuclear Infrastructure Utilization Scenarios}
 \newacronym{GET}{GET}{general equivalence theory}
 \newacronym{GIF}{GIF}{Generation IV International Forum}
+\newacronym{GMRES}{GMRES}{generalized minimal residual}
 \newacronym{GPAM}{GPAM}{Generic Performance Assessment Model}
 \newacronym{GRSAC}{GRSAC}{Graphite Reactor Severe Accident Code}
 \newacronym{GUI}{GUI}{graphical user interface}
